Name:                emulate8080
Version:             0.0.1
Synopsis:            Intel 8080 bytecode emulator
-- Description:
-- The license under which the package is released.
License:             BSD3
License-file:        LICENSE
Author:              Carl Baatz
Maintainer:          carl.baatz@gmail.com
Category:            Development
Build-type:          Simple

Cabal-version:       >=1.2

Executable emulate8080
   Main-is:		Main.hs
   hs-source-dirs: 	src
   Build-depends:   	base >= 4,
                        mtl >= 2.0.1.0,
                        array >= 0.3.0.2
-- Build-depends:
-- Other-modules:
