Name:                Hamu8080
Version:             0.1.0
Synopsis:            Intel 8080 machine code emulator
License:             BSD3
License-file:        LICENSE
Author:              Carl Baatz
Maintainer:          carl.baatz@gmail.com
Category:            Development
Build-type:          Simple

Cabal-version:       >=1.2

Executable hamu8080
   Main-is:		Main.hs
   hs-source-dirs: 	src
   Build-depends:   	base >= 4,
                        mtl >= 2.0.1.0,
                        array >= 0.3.0.2
  ghc-options:	  	-Wall -O